--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/pay_index.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/pay_index.vm
@@ -37,7 +37,6 @@
             <form class="common-form" action="${ufbDomain}/trade/pay_result.htm" method="post">
                 ${refreshTools.genInputHtml()}
 				<input id="tradeacco" name="tradeacco" value="${curCard.tradeacco}" type="hidden"/>
-				<input id="appamt" name="appamt" value="" type="hidden"/>
 				<ul>
                     <li class="clearfix">
                         <span class="form-title">银行选择</span>
@@ -69,7 +68,7 @@
                     </li>
                     <li>
                         <span class="form-title">充值金额</span>
-                        <input id="appamt_display" class="input-text" type="text" value="">元
+                        <input id="appamt" name="appamt" class="ipt-cash input-text" type="text" value="">元
                         <span class="tips-normal"></span>
                         <span id="appamtTips" class="tips-check"><i class="icon"></i>验证提示</span>
                     </li>
@@ -88,52 +87,61 @@
         </div>
     </div>
 </div>
-
 <script src="${staticDomain}/js/scripts/load.js"></script>
+<script src="${staticDomain}/js/scripts/register.js"></script>
 <script src="${staticDomain}/js/ufuCommon.js"></script>
 <script type="text/javascript">
 	$(function(){
+		// 覆盖register.js验证
+		var check_pwd1 = function (ipt) {
+			var value = ipt.val();
+            if (value == "") {
+            	showTips(ipt, "密码不能为空");
+				return false;
+            }
+            var regex1 = /\s+/;
+            if (regex1.test(value)) {
+                showTips(ipt, "密码中不允许有空格");
+				return false;
+            }
+			
+			showTips(ipt, 0);
+			return true;
+		}
+		
+		$("#tradePwd").on("blur", function() {
+			check_pwd1($("#tradePwd"));
+        });
+		
+		// 金额表单控制
+		$("#appamt").on("blur", function(){
+			var appamt = formatCurrency1($("#appamt").val());
+			if(appamt == '0.00'){
+				$("#appamt").val('');
+				showTips($(this), "请输入正确格式的金额，比如1000.00！");
+				//$("#appamtTips").html('请输入正确格式的金额，比如1000.00！');
+				//$("#appamtTips").show();
+			}else{
+				$("#appamt").val(appamt);
+			}
+		});
+		
 		// 点击银行卡
 		$(".card").on("click", function(){
 			$("#tradeacco").val($(this).attr("tradeacco"));
 		});
 		
-		// 金额表单控制
-		$("#appamt_display").on("blur", function(){
-			var appamt_1 = formatCurrency1($("#appamt_display").val());
-			var appamt_2 = formatCurrency2($("#appamt_display").val());
-			if(appamt_1 == '0.00' || appamt_2 == '0.00'){
-				$("#appamt").val('');
-				$("#appamt_display").val('');
-				$("#appamtTips").html('请输入正确格式的金额，比如1000.00！');
-				$("#appamtTips").show();
-			}else{
-				$("#appamt").val(appamt_1);
-				$("#appamt_display").val(appamt_2);
+		// 表单提交时，验证	
+		$("#submit").on("click", function(){
+			if(!check_cash($("#appamt"))){
+				return false;
+			}
+			if(!check_pwd1($("#tradePwd"))){
+				return false;
 			}
 		});
 		
-		// 表单提交时，验证	
-		$("#submit").on("click", function(){
-			if($("#appamt").val() == ""){
-				var appamtMsg = '<i class="icon"></i>请输入金额！';
-				$("#appamtTips").html(appamtMsg);
-				$("#appamtTips").show();
-				return false;
-			}else if($("#tradePwd").val() == ""){
-				var tradePwdMsg = '<i class="icon"></i>请输入交易密码！';
-				$("#tradePwdTips").html(tradePwdMsg);
-				$("#tradePwdTips").show();
-				return false;
-			}
-			//} else if(!check_pwd1($("#tradePwd"))){
-    		//	return false;
-    		//}
-			
-			return true;
-		});
 	});
 </script>
-<script src="${staticDomain}/js/scripts/register.js"></script>
 </body>
 </html>
