--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -16,7 +16,7 @@ $(function(){
             <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
             <div class="nav"><a id="btn-logout"
     			href="${staticDomain}/cust/logout.htm">登出</a>|<a
-    			href="${staticDomain}/cust/login.htm">我的幼富通</a>|<a class="last" 
+    			href="${staticDomain}/session/login.htm">我的幼富通</a>|<a class="last" 
     			href="javascript:;">帮助</a></div>
         </div>
     </div>
