--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardSuccessPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardSuccessPage.vm
@@ -21,7 +21,7 @@ $(function(){
             <div class="nav"><a id="btn-logout"
 				href="javascript:;">登出</a>|<a 
 				href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
-				href="${staticDomain}/cust/login.htm">我的幼富通</a>|<a class="last" 
+				href="${staticDomain}/session/login.htm">我的幼富通</a>|<a class="last" 
 				href="javascript:;">帮助</a></div>
         </div>
     </div>
