--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/indexPage.vm
@@ -24,9 +24,17 @@ $(function(){
 <div class="header">
     <div class="inner clearfix rel">
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
+		<div class="nav"><a 
+			href="index.html">首页</a>|<a class="current" 
+			href="centerClose.html">资产总览</a>|<a 
+			href="settingAccount.html">账户管理</a>|<a 
+			href="helpNotice.html">帮助中心</a><span class="member" 
+			href="javascript:;"><i class="trans icon"></i>1500047781<a 
+			href="javascript:;" class="trans out">安全退出</a></span></div>
+			
         <div class="nav"><a id="btn-logout"
 			href="${staticDomain}/cust/logout.htm">登出</a>|<a
-			href="${staticDomain}/cust/login.htm">我的幼富通</a>|<a class="last" 
+			href="${staticDomain}/session/login.htm">我的幼富通</a>|<a class="last" 
 			href="javascript:;">帮助</a></div>
     </div>
 </div>
@@ -222,6 +230,12 @@ $(function(){
     </div>
 </div>
 </div>
+<div class="alert-box box-openGuide"><img class="img-openGuide" src="${staticDomain}/images/img-open.png"></div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
+<script>
+    $(function () {
+        alertBox(".box-openGuide");
+    });
+</script>
 </body>
 </html>
