--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerPage.vm
@@ -127,7 +127,7 @@ $(function(){
     <div class="inner clearfix rel">
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
         <div class="nav"><a
-			href="${staticDomain}/login/index.htm">登录</a>|<a 
+			href="${staticDomain}/home/index.htm">登录</a>|<a 
 			href="${staticDomain}/cust/register.htm">注册</a>|<a class="last" 
 			href="javascript:;">帮助</a></div>
     </div>
