--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerSuccessPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/cust/registerSuccessPage.vm
@@ -25,13 +25,13 @@ $(function(){
         <div class="nav"><a id="btn-logout"
 			href="${staticDomain}/login/logout.htm">登出</a>|<a 
 			href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
-			href="${staticDomain}/cust/login.htm">我的幼富通</a>|<a class="last" 
+			href="${staticDomain}/session/login.htm">我的幼富通</a>|<a class="last" 
 			href="javascript:;">帮助</a></div>
     </div>
 </div>
 <div class="body">
     <div class="inner container-register rel">
-		<form id="form-login" method="post" action="${staticDomain}/cust/login.htm">
+		<form id="form-login" method="post" action="${staticDomain}/session/login.htm">
         <div class="form-done">
             <div class="title">注册成功</div>
             <a id="btn-login" class="btn" href="javascript:;">进入幼富通</a>
