--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/login/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/login/indexPage.vm
@@ -41,7 +41,7 @@ $(function(){
     <div class="inner clearfix rel">
         <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
         <div class="nav"><a
-			href="${staticDomain}/login/index.htm">登录</a>|<a
+			href="${staticDomain}/home/index.htm">登录</a>|<a
 			href="${staticDomain}/cust/register.htm">注册</a>|<a class="member" 
 			href="javascript:;">我的幼富通</a>|<a class="last" 
 			href="javascript:;">帮助</a></div>
@@ -49,7 +49,7 @@ $(function(){
 </div>
 <div class="body">
     <div class="inner container-register rel">
-		<form id="form-login" class="common-form" method="post" action="${staticDomain}/login/login.htm">
+		<form id="form-login" class="common-form" method="post" action="${staticDomain}/cust/login.htm">
         <ul>
 			<li
             >
