--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_result.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/trade/cash_result.vm
@@ -4,3 +4,5 @@
 	   <a href="${ufbDomain}/query/trade_detail.htm">立即查询</a>
 	</p>
 </div>
+	
+<script src="${staticDomain}/js/scripts/load.js"></script>
