--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/home/indexPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/home/indexPage.vm
@@ -42,7 +42,7 @@
 							<span class="tips-check"><i class="icon"></i>$!{errMsg_pswpwd}</span>
 						</li>
                         <li class="clearfix">
-							<label class="fl">验证码</label>
+							<label class="fl">验证码：[测试请填0000]</label>
 						</li>
                         <li>
 							<input type="text" class="ipt-code input-code" value="0000">
@@ -62,9 +62,12 @@
     <div class="header">
         <div class="inner clearfix rel">
             <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-			<div class="nav"><a class="trigger-loginBox" 
-				##href="${staticDomain}/login/index.htm">登录</a>|<a
-				href="#">登录</a>|<a
+			<div class="nav">
+				#if ($CustinfoVo)
+				<a href="${staticDomain}/session/login.htm">登录s</a>|<a
+				#else
+				<a class="trigger-loginBox" href="#">登录</a>|<a
+				#end
 				href="${staticDomain}/cust/register.htm">注册</a>|<a
 				href="javascript:;">我的幼富通</a>|<a class="last" 
 				href="helpNotice.html">帮助</a></div>
@@ -207,6 +210,17 @@
 		//}
 		// $("#form-login").submit();
 	};
+	
+	$(function(){
+	
+		#if ($CustinfoVo)
+		
+		#else
+			alertBox(".box-login");
+		#end
+	
+	});
+	
 </script>
 </body>
 </html>
