--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardPage.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/bankcard/addBankCardPage.vm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <!--
-<title>幼富通 - 资产总览</title>
+<title>幼富通 - 开户流程</title>
 -->
 <script>
 $(function(){
@@ -70,11 +70,6 @@ $(function(){
 			$("#form-addBankCard").submit();
 		}
 	});
-	
-	$("#btn-logout").on("click",function(){
-		$("#form-addBankCard").attr("action", "../cust/logout.htm");
-		$("#form-addBankCard").submit();
-	});
 });
 </script>
 </head>
@@ -83,10 +78,18 @@ $(function(){
     <div class="header">
         <div class="inner clearfix rel">
             <div class="logo"><a href="javascript:;">幼教金融，一站通</a></div>
-            <div class="nav"><a id="btn-logout"
-				href="${staticDomain}/cust/logout.htm">登出</a>|<a 
-				href="${staticDomain}/session/login.htm">我的幼富通</a>|<a class="last" 
-				href="javascript:;">帮助</a></div>
+            <div class="nav"><a 
+				href="${staticDomain}/home/index.htm">首页</a>|<a class="current" 
+				href="${staticDomain}/session/login.htm">资产总览</a>|<a 
+				href="${staticDomain}/setting/settingAccount.htm">账户管理</a>|<a 
+				href="helpNotice.html">帮助中心</a><span class="member" 
+				href="javascript:;"><i class="trans icon"></i>#if ($CustinfoVo.invnm)
+                	    $!{CustinfoVo.invnm}
+                	#else
+                	    $!{CustinfoVo.mobileno}
+                	#end<a 
+				href="${staticDomain}/cust/logout.htm" class="trans out">安全退出</a></span>
+			</div>
         </div>
     </div>
     <div class="body">
@@ -214,7 +217,7 @@ $(function(){
                     <p>海富通产品：400-8840-099</p>
                 </div>
                 <div class="copyright">
-                    <p>上海泛投信息科技有限公司版权所有 ©2015</p>
+                    <p>幼富通版权所有 ©2015</p>
                     <p><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></p>
                 </div>
             </div>
