--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/common/footer1.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/common/footer1.vm
@@ -6,7 +6,7 @@
             <p>海富通产品：400-8840-099</p>
         </div>
         <div class="copyright fr">
-            <p>上海泛投信息科技有限公司版权所有 ©2015</p>
+            <p>幼富通版权所有 ©2015</p>
             <p><a target="_blank" href="http://www.miitbeian.gov.cn/">沪ICP备14054347号</a></p>
         </div>
     </div>
