--- a/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
+++ b/ufb.web/src/main/webapp/WEB-INF/templates/control/setting/settingPassword.vm
@@ -6,6 +6,47 @@
 -->
 <script>
 $(function(){
+	//页面初始化 
+	$("form input[type=text],input[type=password]").each(function () {
+        var _this = $(this);
+		if(_this.val()!="") {
+            _this.siblings(".tips-normal").hide();
+        }
+    });
+	
+	//注册按钮
+	$("#btn-settingTradePwd").on("click",function(){
+		if(!check_null($("#password0"), "密码不能为空")){
+			return false;
+		}
+		if(!check_pwd1($("#password1"))){
+			return false;
+		}
+		if(!check_pwd2($("#password2"))){
+			return false;
+		}
+		var errLen = $("ul li.error").length;
+		if(errLen>0){
+			$("ul li.error:eq(0) input[type=text]").focus();
+			$("ul li.error:eq(0) input[type=password]").focus();
+		}else{
+			$("#form-settingTradePwd").submit();
+		}
+	});
+	
+#if("1"==$TAB || "1S"==$TAB)
+    $("#tab1").addClass("on");
+    $("#panel1").removeClass("slide-out");
+#elseif("2"==$TAB || "2S"==$TAB)
+	$("#tab2").addClass("on");
+    $("#panel2").removeClass("slide-out");
+#end
+
+#if("1S"==$TAB)
+	errorBox("修改交易密码","成功！");
+#end
+
+	
 });
 </script>
 </head>
@@ -30,10 +71,7 @@ $(function(){
         </div>
     </div>
     <div class="body">
-    <form id="form-settingCard" action="${ufbDomain}/setting/settingCard.htm" method="post">
-    ${refreshTools.genInputHtml()}
-    <input id="bankacco" name="bankacco" value="${bankacco}" type="hidden"/>
-    <div class="inner clearfix">
+       <div class="inner clearfix">
         <div class="title">
             <h2 class="title-main">帮助中心</h2>
         </div>
@@ -49,67 +87,80 @@ $(function(){
             <div class="setting-content">
                 <div class="tabs password-tabs clearfix">
                     <a class="btn fl" href="findPasswordStep1.html">修改登录密码</a>
-                    <a class="btn tab fl" href="javascript:;">修改交易密码</a>
-                    <a class="btn tab fl" href="javascript:;">忘记交易密码</a>
+                    <a id="tab1" class="btn tab fl" href="javascript:;">修改交易密码</a>
+                    <a id="tab2" class="btn tab fl" href="javascript:;">忘记交易密码</a>
                 </div>
-                <div class="tips">交易密码： 为使用幼富宝交易时所需要输入的密码，不可与登录密码相同！</div>
+				<div class="tips">交易密码： 为使用幼富宝交易时所需要输入的密码，不可与登录密码相同！</div>
                 <div class="panels password-panels">
-                    <div class="panel slide-out">
-                        <form>
-                            <ul>
-                                <li class="ok">
+                    <div id="panel1" class="panel slide-out">
+						<form id="form-settingTradePwd" class="common-form" action="${ufbDomain}/setting/settingTradePwd.htm" method="post">
+                            ${refreshTools.genInputHtml()}
+							<ul>
+                                <li id="errMsg_password0"
+                                #if($errMsg_password0)
+                                class="error"
+                                #end
+                                >
                                     <span class="form-title">原交易密码</span>
-                                    <input class="input-text" type="password" value="">
+                                    <input id="password0" name="password0" class="ipt-password0 input-text" type="password" value="$!{password0}">
                                     <span class="tips-normal"></span>
-                                    <span class="tips-check"><i class="icon"></i>验证提示</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_password0}</span>
                                 </li>
-                                <li class="ok">
+                                <li id="errMsg_password1"
+                                #if($errMsg_password1)
+                                class="error"
+                                #end
+                                >
                                     <span class="form-title">新交易密码</span>
-                                    <input class="input-text" type="password" value="">
+                                    <input id="password1" name="password1" class="ipt-password1 input-text" type="password" value="$!{password1}">
                                     <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
-                                    <span class="tips-check"><i class="icon"></i>验证提示</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_password1}</span>
                                 </li>
-                                <li class="error">
+                                <li id="errMsg_password2"
+                                #if($errMsg_password2)
+                                class="error"
+                                #end
+                                >
                                     <span class="form-title">交易密码确认</span>
-                                    <input class="input-text" type="password" value="">
+                                    <input id="password2" name="password2" class="ipt-password2 input-text" type="password" value="$!{password2}">
                                     <span class="tips-normal">请再次输入密码</span>
-                                    <span class="tips-check"><i class="icon"></i>验证提示</span>
+                                    <span class="tips-check"><i class="icon"></i>$!{errMsg_password2}</span>
                                 </li>
                                 <li>
-                                    <input class="input-button ok" type="submit" value="提&nbsp;交">
+                                    <input id="btn-settingTradePwd" class="input-button ok" type="button" value="提&nbsp;交">
                                 </li>
                             </ul>
                         </form>
                     </div>
-                    <div class="panel slide-out">
-                        <form>
+                    <div id="panel2" class="panel slide-out">
+                        <form class="common-form">
                             <ul>
                                 <li class="ok">
                                     <span class="form-title">手机号</span>
                                     <div>189****1111</div>
                                 </li>
-                                <li class="error">
+                                <li>
                                     <span class="form-title">验证码</span>
-                                    <input class="input-code" type="text" value="">
+                                    <input class="ipt-code input-code" type="text" value="">
                                     <span class="tips-normal">请输入验证码</span>
                                     <span class="tips-check"><i class="icon"></i>验证提示</span>
                                 </li>
-                                <li class="error">
+                                <li>
                                     <span class="form-title">手机验证码</span>
-                                    <input class="input-code" type="text" value="">
+                                    <input class="ipt-phoneCode input-code" type="text" value="">
                                     <span class="tips-normal">6位验证码</span>
                                     <input class="input-button" type="button" value="获取验证码">
                                     <span class="tips-check"><i class="icon"></i>验证提示</span>
                                 </li>
                                 <li class="ok">
                                     <span class="form-title">新交易密码</span>
-                                    <input class="input-text" type="password" value="">
+                                    <input class="ipt-password1 input-text" type="password" value="">
                                     <span class="tips-normal">6-20个大小写英文字母、符号或数字</span>
                                     <span class="tips-check"><i class="icon"></i>验证提示</span>
                                 </li>
-                                <li class="error">
+                                <li>
                                     <span class="form-title">交易密码确认</span>
-                                    <input class="input-text" type="password" value="">
+                                    <input class="ipt-password2 input-text" type="password" value="">
                                     <span class="tips-normal">请再次输入密码</span>
                                     <span class="tips-check"><i class="icon"></i>验证提示</span>
                                 </li>
@@ -123,6 +174,9 @@ $(function(){
             </div>
         </div>
     </div>
+	<form id="form-settingPassword" action="${ufbDomain}/setting/settingPassword.htm" method="post">
+		${refreshTools.genInputHtml()}
+		<input id="bankacco" name="bankacco" value="${bankacco}" type="hidden"/>
     </form>
     </div>
     <div class="footer">
@@ -140,5 +194,6 @@ $(function(){
     </div>
 </div>
 <script src="${staticDomain}/js/scripts/load.js"></script>
+<script src="${staticDomain}/js/scripts/register.js"></script>
 </body>
 </html>
